starts css styling

--- a/index.html
+++ b/index.html
@@ -4,8 +4,126 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Midterm Project - Prototype</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/main.css">
+
+    <!-- Icon Links -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+    <!-- Font Family -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,
+    wght@0,100..900;1,100..900&family=Open+Sans&family=Playfair+Display:ital,
+    wght@0,400;0,600;1,400;1,600&family=Poppins:ital,wght@0,400;0,600;1,400;
+    1,600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,
+    100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;
+    1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
 </head>
-<body>
+<body class="body">
     
+    <div class="header">
+        <div class="header-container">
+            <div class="logo">
+                <img src="img/Group 3.png" alt="logo">
+            </div>
+            <div class="nav"></div>
+                <nav class="navbar">
+                    <ul class="nav-list">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Product</a></li>
+                    <li><a href="#">Faq</a></li>
+                    <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <div class="banner">
+            <!--<div class="main-banner">
+                <img src="img/Rectangle 48.png" alt="main banner">
+            </div>-->
+            <div class="text-banner">
+                <h4 id="txtfood">Food app</h4>
+                <h1 id="pop">Why stay hungry when<br>you can order form Bella Onoje</h1>
+                <h4>Download the bella onoje’s food app now on</h4>
+            </div>
+            <div class="btns">
+                <div class="btn-play">
+                    <button class="playstore">Playstore</button>
+                </div>
+                <div class="btn-app">
+                    <button class="Appstore">App store</button>
+                </div>
+            </div>
+                <div class="mobile">
+                <img src="img/Group 53.png" alt="mobile interface">
+                </div>
+        </div>
+    </div>
+
+    <main class="main-content">
+        <h2 id="pop">How the app works</h2>
+
+        <div class="cards"></div>
+            <div class="card1">
+                <h3>Create an account</h3>
+                <h2>Create/login to an existing account to get started</h2>
+                <h4>An account is created with your email and a desired password</h4>
+                <div class="account">
+                    <img src="img/Rectangle.png" alt="create an account interface">
+                </div>
+            </div>
+            <div class="card2">
+                <h3>Explore while shopping</h3>
+                <h2>Shop for your favorites meal as e dey hot</h2>
+                <h4>Shop for your favorite meals or drinks and enjoy while doing it</h4>
+                <div class="explore">
+                    <img src="img/Rectangle (1).png" alt="explore interface">
+                </div>
+            </div>
+            <div class="card3">
+                <h3>Checkout</h3>
+                <h2>When you done check out and get it delivered</h2>
+                <h4>When you done check out and get it delivered with ease.</h4>
+                <div class="checkout">
+                    <img src="img/Rectangle (2).png" alt="checkout interface">
+                </div>
+            </div>
+        </div>
+        
+        <div class="foot-banner">
+            <div class="banner">
+                <img src="img/Rectangle 48.png" alt="second banner">
+            </div>
+            <h2>Download the app now</h2>
+            <h4>Available on your favorite store. Start your premium experience now</h4>
+            <div class="btn-play">
+                <button class="playstore">Playstore</button>
+            </div>
+            <div class="btn-app">
+                <button class="Appstore">App store</button>
+            </div>
+        </div>
+        <!-- Site Footer -->
+        <footer class="footer">
+            <div class="logoft">
+                <img src="img/logo.png" alt="logo">
+            </div>
+            <div class="fticons">
+                SOCIAL MEDIA ICONS
+            </div>
+            <p class="copy">Copywright 2020 Bella Onoje.com</p>            
+        </footer>
+    </main>
+
+
+
+
+
+
 </body>
 </html>
