styles mobile first

--- a/index.html
+++ b/index.html
@@ -44,68 +44,78 @@
         </div>
         <div class="banner">
             <!--<div class="main-banner">
-                <img src="img/Rectangle 48.png" alt="main banner">
+            <img src="img/Rectangle 48.png" alt="main banner">
             </div>-->
-            <div class="text-banner">
-                <h4 id="txtfood">Food app</h4>
-                <h1 id="pop">Why stay hungry when<br>you can order form Bella Onoje</h1>
-                <h4>Download the bella onoje’s food app now on</h4>
+            <div class="banner-img">
+                <div class="banner1">
+                    <div class="text-banner">
+                        <h4 id="txtfood">Food app</h4>
+                        <h1 id="pop">Why stay hungry when<br>you can order form Bella Onoje</h1>
+                        <h4>Download the bella onoje’s food app now on</h4>
+                    </div>
+                    <div class="btns">
+                        <div class="btn-play">
+                            <button class="playstore">Playstore</button>
+                        </div>
+                        <div class="btn-app">
+                            <button class="appstore">App store</button>
+                        </div>
+                    </div>
+                    <div class="mobile">
+                        <img src="img/Group 53.png" alt="mobile interface" id="mobile">
+                    </div>
+                </div>
             </div>
-            <div class="btns">
-                <div class="btn-play">
-                    <button class="playstore">Playstore</button>
-                </div>
-                <div class="btn-app">
-                    <button class="Appstore">App store</button>
-                </div>
-            </div>
-                <div class="mobile">
-                <img src="img/Group 53.png" alt="mobile interface">
-                </div>
         </div>
     </div>
-
+    
     <main class="main-content">
-        <h2 id="pop">How the app works</h2>
+        <h2 id="pop" class="pop">How the app works</h2>
 
-        <div class="cards"></div>
+        <div class="cards">
             <div class="card1">
-                <h3>Create an account</h3>
-                <h2>Create/login to an existing account to get started</h2>
-                <h4>An account is created with your email and a desired password</h4>
-                <div class="account">
-                    <img src="img/Rectangle.png" alt="create an account interface">
+                <div class="txt">
+                    <h3>Create an account</h3>
+                    <h2>Create/login to an existing account to get started</h2>
+                    <h4>An account is created with your email and a desired password</h4>
+                </div>
+                <div class="cell">
+                    <img src="img/Rectangle (4).png" alt="create an account interface">
                 </div>
             </div>
             <div class="card2">
-                <h3>Explore while shopping</h3>
-                <h2>Shop for your favorites meal as e dey hot</h2>
-                <h4>Shop for your favorite meals or drinks and enjoy while doing it</h4>
-                <div class="explore">
+                <div class="txt">
+                    <h3>Explore while shopping</h3>
+                    <h2>Shop for your favorites meal as e dey hot</h2>
+                    <h4>Shop for your favorite meals or drinks and enjoy while doing it</h4>
+                </div>
+                <div class="cell">
                     <img src="img/Rectangle (1).png" alt="explore interface">
                 </div>
             </div>
             <div class="card3">
-                <h3>Checkout</h3>
-                <h2>When you done check out and get it delivered</h2>
-                <h4>When you done check out and get it delivered with ease.</h4>
-                <div class="checkout">
+                <div class="txt">
+                    <h3>Checkout</h3>
+                    <h2>When you done check out and get it delivered</h2>
+                    <h4>When you done check out and get it delivered with ease.</h4>
+                </div>
+                <div class="cell">
                     <img src="img/Rectangle (2).png" alt="checkout interface">
                 </div>
             </div>
         </div>
         
         <div class="foot-banner">
-            <div class="banner">
+            <!--<div class="banner">
                 <img src="img/Rectangle 48.png" alt="second banner">
+            </div>-->
+            <h2 id="white">Download the app now</h2>
+            <h4 id="white">Available on your favorite store. Start your premium experience now</h4>
+            <div class="btn-buy">
+                <button class="buy">Buy now</button>
             </div>
-            <h2>Download the app now</h2>
-            <h4>Available on your favorite store. Start your premium experience now</h4>
-            <div class="btn-play">
-                <button class="playstore">Playstore</button>
-            </div>
-            <div class="btn-app">
-                <button class="Appstore">App store</button>
+            <div class="btn-try">
+                <button class="try">Try for free</button>
             </div>
         </div>
         <!-- Site Footer -->
