--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         </div>
                     </div>
                     <div class="mobile">
-                        <img src="img/Group 53.png" alt="mobile interface" id="mobile">
+                        <img src="img/cellphones.png" alt="mobile interface" id="mobile">
                     </div>
                 </div>
             </div>
@@ -109,13 +109,17 @@
             <!--<div class="banner">
                 <img src="img/Rectangle 48.png" alt="second banner">
             </div>-->
-            <h2 id="white">Download the app now</h2>
-            <h4 id="white">Available on your favorite store. Start your premium experience now</h4>
-            <div class="btn-buy">
-                <button class="buy">Buy now</button>
-            </div>
-            <div class="btn-try">
-                <button class="try">Try for free</button>
+            <div id="foot-banner">
+                <h2 id="white">Download the app now</h2>
+                <h4 id="white">Most calendars are designed for teams. </h4>
+                <div class="btn-foot">
+                    <div class="btn-buy">
+                        <button class="buy">Buy now</button>
+                    </div>
+                    <div class="btn-try">
+                        <button class="try">Try for free</button>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- Site Footer -->
