--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                     <input type="checkbox" id="menu-toggle" class="menu-toggle">
                     <label for="menu-toggle" class="hamburger">&#9776;</label>
                     <ul class="nav-list">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html" class="active">Home</a></li>
                         <li><a href="#">Product</a></li>
-                        <li><a href="#">Faq</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="faq.html">Faq</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
