adds aria roles

--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,30 @@
 
     <main>
 
+        <section class="contact">
+            <h4 class="contact-txt">Contact us</h4>
+            <!-- Adds a form to contact section -->
+            <fieldset>
+                <form action="thanks.html" method="post" aria-label="contact us form">
+                    <div class="input">
+                        <label for="name">Name</label>
+                        <input type="text" id="yourname" name="yourname" aria-label="text input">
+                    </div>
+                    <div class="input">
+                        <label for="email">Email</label>
+                        <input type="email" id="youremail" name="yourname">
+                    </div>
+                    <div class="input">
+                        <label for="message">Message</label>
+                        <textarea name="message" id="yourmessage"></textarea>
+                    </div>
+                    <div class="btn-form">
+                        <button type="submit" class="btnf" aria-label="Submit contact form">SEND</button>
+                    </div>
+                </form>
+            </fieldset>
+        </section>
+
         <!-- Site Footer -->
         <footer class="footer">
             <div class="logoft">
