--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     <div class="header">
         <div class="header-container">
             <div class="logo">
-                <img src="img/Group 3.png" alt="logo">
+                <img src="img/Group 3.png" alt="brand logo">
             </div>
             <div class="nav">
                 <nav class="navbar">
                     <input type="checkbox" id="menu-toggle" class="menu-toggle">
-                    <label for="menu-toggle" class="hamburger">&#9776;</label>
+                    <label for="menu-toggle" class="hamburger" aria-label="button">&#9776;</label>
                     <ul class="nav-list">
                         <li><a href="index.html" class="active">Home</a></li>
                         <li><a href="#">Product</a></li>
@@ -44,7 +44,7 @@
                 </nav>
             </div>
         </div>
-        <div class="banner">
+        <div class="banner" aria-label="banner">
             <!--<div class="main-banner">
             <img src="img/Rectangle 48.png" alt="main banner">
             </div>-->
@@ -57,10 +57,10 @@
                     </div>
                     <div class="btns">
                         <div class="btn-play">
-                            <button class="playstore">Playstore</button>
+                            <button class="playstore" aria-label="button">Playstore</button>
                         </div>
                         <div class="btn-app">
-                            <button class="appstore">App store</button>
+                            <button class="appstore" aria-label="button">App store</button>
                         </div>
                     </div>
                     <div class="mobile">
@@ -118,10 +118,10 @@
             </div>
             <div class="btn-foot">
                 <div class="btn-buy">
-                     <button class="buy">Buy now</button>
+                     <button class="buy" aria-label="Buy now button">Buy now</button>
                 </div>
                 <div class="btn-try">
-                    <button class="try">Try for free</button>
+                    <button class="try" aria-label="Try for free button">Try for free</button>
                 </div>
             </div>
             
